# macmon-bindings

./: .gitignore  Makefile
python/: .gitignore  README.md  build_ffi.py  example.py  pyproject.toml  setup.py
python/macmon/: __init__.py
swift/: Package.swift  README.md
swift/Sources/MacmonSwift/: Macmon.swift
